# streaming-catalog

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  STATE.md  docker-compose.yml  pyproject.toml  schema.sql  streaming-catalog  streaming-catalog.bat
docs/: linkedin-post.md  scheduling.md  setup-chrome.md  troubleshooting.md
examples/: crontab.example  launchd.plist  task-scheduler.xml
src/streaming_catalog/: __main__.py  cli.py  collector.py  config.py  db.py  schema.sql
src/streaming_catalog/scrapers/: google_play.py  movies_anywhere.py  sync.py  vudu.py
src/streaming_catalog/search/: app.py
src/streaming_catalog/search/templates/: index.html
