[project]
name = "streaming-catalog"
version = "0.1.0"
description = "Catalog your Fandango at Home and Movies Anywhere libraries into a searchable SQLite database"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
search = ["flask>=3.0", "markupsafe>=2.1"]
collect = ["selenium>=4.15"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses",
    "ruff",
]
all = ["streaming-catalog[search,collect]"]

[project.scripts]
streaming-catalog = "streaming_catalog.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
streaming_catalog = ["schema.sql", "search/templates/*.html"]

[tool.ruff]
target-version = "py39"
line-length = 100
